2016-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Added seealso reference to anytime

2016-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Added 'seealso' reference to anytime which
	was developed based on the initial work here
	* man/toPOSIXct.Rd: Ditto

2016-09-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: All functions returns NumericVector types and
	deal with input timezone; (comparison) functions charToPOSIXct and
	cToPOSIXct have documentation too
	* man/toPOSIXct.Rd: Updated
	* man/cToPOSIXct.Rd: Added
	* man/charToPOSIXct.Rd: Added

	* demo/00Index: Updated

	* .travis.yml: Switch to using run.sh for Travis CI

2016-08-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Additional format using '%a %b %d'

2015-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp:(cToPOSIXct): C library strptime for timimg
	comparison

2015-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp (charToPOSIXct): Smaller version to test timing
	but commented out as it needs to link with libboost_date_time

	* demo/toPOSIXctTiming.R: Simple timing benchmark

2015-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* demo/toPOSIXct.R: Expanded demo with more examples

	* src/toPOSIXct.cpp: Also support %b and %B formats for month

2015-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Now provides toPOSIXct() function, so source
	file renamed as well from parsePOSIXt.cpp
	* man/toPOSIXct.Rd: Renamed from parsePOSIXt.Rd
	* demo/toPOSIXct.R: Renamed from parsePOSIXt.R; uses toPOSIXct()

2015-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/parsePOSIXt.cpp: Remove some no-longer-used code,
	add explicit from conversion from YYYYMMDD to YYYY/MM/DD,
	finer distinction between integer and numeric

	* demo/parsePOSIXt.R: Extended demo file with more examples

2015-03-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/parsePOSIXt.cpp: Added two more formats; also added