@@ -39,8 +39,8 @@ getDayOfWeek(date)
 getDayOfYear(date)
 getIMMDate(mon, year)
 getNthDayOfWeek(nthday, dow, mon, year)
-getLastDayOfWeekInMonth(nthday, mon, year) 
-getFirstDayOfWeekInMonth(nthday, mon, year) 
+getLastDayOfWeekInMonth(dow, mon, year) 
+getFirstDayOfWeekInMonth(dow, mon, year) 
 getFirstDayOfWeekAfter(dow, date) 
 getLastDayOfWeekBefore(dow, date)
 }
